added basic CSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,23 +7,18 @@
   <link rel="stylesheet" href="css/main.css">
   <body>
 
-
-    <div id="sidebar">
-      <h2>Note List</h2>
-      <ol id="note-list">
-      </ol>
-    </div>
-
     <h1>My Food Diary
     </h1>
 
-    <div id="main">
+    <div id="searchbar">
 
     </div>
 
+    <form class="add-items">
+      <input type="text" name="item" placeholder="Meal Description" required>
+      <input type="submit" value="ADD MEAL">
+    </form>
 
   </body>
-  <script src= 'src/note.js'></script>
-  <script src= 'src/user.js'></script>
   <script src= 'src/index.js'></script>
 </html>
