--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,22 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Anthony & Steve's Food Diary</title>
   </head>
+  <link rel="shortcut icon" type="image/png" href="https://vignette.wikia.nocookie.net/godfather-fanon/images/4/4d/Taco.png/revision/latest?cb=20140915182656">
   <link rel="stylesheet" href="css/main.css">
   <body>
 
-    <h1>My Food Diary
+    <nav>
+      <ul id="main">
+        <!-- <li class="logo"><a href="#">LOST.</a></li> -->
+        <li><a href="">HOME</a></li>
+        <li><a href="">ADD MEAL</a></li>
+        <li><a href="">LOOKUP MEAL</a></li>
+      </ul>
+    </nav>
+
+    <h1>MY FOOD DIARY
     </h1>
+    <div class="site-wrap">
+      <form class="add-items">
+        <input type="text" name="item" placeholder="Meal Description" required>
+        <input type="submit" value="ADD MEAL">
+      </form>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+
+  </div>
 
     <div id="searchbar">
 
     </div>
 
-    <form class="add-items">
-      <input type="text" name="item" placeholder="Meal Description" required>
-      <input type="submit" value="ADD MEAL">
-    </form>
+
 
   </body>
   <script src= 'src/index.js'></script>
