--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,29 +11,52 @@
     <nav>
       <ul id="main">
         <!-- <li class="logo"><a href="#">LOST.</a></li> -->
-        <li><a href="">HOME</a></li>
-        <li><a href="">ADD MEAL</a></li>
-        <li><a href="">LOOKUP MEAL</a></li>
+        <li><a id="add-meal-button" href="#">ADD MEAL</a></li>
+        <li><a id="search-meal-button"href="#">SEARCH MEAL</a></li>
       </ul>
     </nav>
 
-    <h1>MY FOOD DIARY
-    </h1>
+    <h1>MY FOOD DIARY</h1>
+    <div id="food-form">
     <div class="site-wrap">
       <form class="add-items">
-        <input type="text" name="item" placeholder="Meal Description" required>
+        <h3>Food Entry</h3>
+        <div>
+        <label for="meal">Meal Name </label>
+        <br>
+        <input id="meal-box" type="text" name="meal" required>
+        <br>
+        <br>
+        <br>
+        <label for="Rank">Select ranking</label>
+        <br>
+        <select id="rank-box" label="Rank" name="Rank">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+        <br>
+        <br>
+        <br>
+        <!-- <input type="text" name="item" placeholder="Rank" required> -->
+        <label for="comments">Comments</label>
+        <br>
+        <!-- <div><input id="comments-box" type="text" name="comments" placeholder="Comments"></div> -->
+        <textarea id="comments-box" name="comments" rows="8" cols="80" placeholder="How was your experience?"></textarea>
+        <br>
+        <br>
         <input type="submit" value="ADD MEAL">
       </form>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
 
+      <div>
   </div>
-
-    <div id="searchbar">
-
-    </div>
 
 
 
   </body>
   <script src= 'src/index.js'></script>
+  <script src= 'src/comment.js'></script>
+  <script src= 'src/meal.js'></script>
 </html>
